# magics

./: CMakeLists.txt  Makefile  align.h  ga.cc  ga.cpp  start.sh
src/: Types.hpp  Verbose.cpp  Verbose.hpp  bitboard.cpp  bitboard.h  ga.cpp  island.cpp  island.h  main.cpp  thread.cpp
src/cuda/: init.cu  init.h  process.cu  process.h
